add GetState with block index

--- a/Mimir.Worker/appsettings.heimdall-for-local.json
+++ b/Mimir.Worker/appsettings.heimdall-for-local.json
@@ -27,11 +27,14 @@
     }
   },
   "Configuration": {
-    "PollerType": "TxPoller",
     "MongoDbConnectionString": "mongodb://rootuser:rootpass@localhost:27017",
+    "DatabaseName": "heimdall",
+    "PollerType": "TxPoller",
     "PlanetType": "heimdall",
     "HeadlessEndpoints": [
-      "http://your headless url/graphql"
+      "https://heimdall-rpc-1.nine-chronicles.com/graphql",
+      "https://heimdall-rpc-2.nine-chronicles.com/graphql",
+      "https://heimdall-rpc-3.nine-chronicles.com/graphql"
     ],
     "EnableInitializing": false
   }
